# internal/server/default_configuration_handler.go
@@ -35,8 +35,8 @@ func CreateDefaultConfiguration(c *gin.Context) {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-	ind, dc, _ := dao.GetDetailedDefaultConfigByID(c.Request.Context(), id)
-	c.JSON(http.StatusCreated, model.DefaultConfiguration{ID: id, Indicator: ind, DeviceComponent: dc})
+	ind, dc, th, _ := dao.GetDetailedDefaultConfigByID(c.Request.Context(), id)
+	c.JSON(http.StatusCreated, model.DefaultConfiguration{ID: id, Indicator: ind, DeviceComponent: dc, Thresholds: th})
 }
 
 // GetDefaultConfiguration возвращает конфигурацию по умолчанию по ID
@@ -50,7 +50,7 @@ func CreateDefaultConfiguration(c *gin.Context) {
 // @Router          /api/v1/default-configurations/{id} [get]
 func GetDefaultConfiguration(c *gin.Context) {
 	id, _ := strconv.ParseInt(c.Param("id"), 10, 64)
-	ind, dc, err := dao.GetDetailedDefaultConfigByID(c.Request.Context(), id)
+	ind, dc, th, err := dao.GetDetailedDefaultConfigByID(c.Request.Context(), id)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
@@ -59,7 +59,7 @@ func GetDefaultConfiguration(c *gin.Context) {
 		c.JSON(http.StatusNotFound, gin.H{"error": "Конфигурация по умолчанию не найдена"})
 		return
 	}
-	c.JSON(http.StatusOK, model.DefaultConfiguration{ID: id, Indicator: ind, DeviceComponent: dc})
+	c.JSON(http.StatusOK, model.DefaultConfiguration{ID: id, Indicator: ind, DeviceComponent: dc, Thresholds: th})
 }
 
 // GetAllDefaultConfigurations возвращает все конфигурации по умолчанию
@@ -106,8 +106,8 @@ func UpdateDefaultConfiguration(c *gin.Context) {
 		c.JSON(http.StatusNotFound, gin.H{"error": "Конфигурация по умолчанию не найдена для обновления"})
 		return
 	}
-	ind, dc, _ := dao.GetDetailedDefaultConfigByID(c.Request.Context(), updatedID)
-	c.JSON(http.StatusOK, model.DefaultConfiguration{ID: updatedID, Indicator: ind, DeviceComponent: dc})
+	ind, dc, th, _ := dao.GetDetailedDefaultConfigByID(c.Request.Context(), updatedID)
+	c.JSON(http.StatusOK, model.DefaultConfiguration{ID: updatedID, Indicator: ind, DeviceComponent: dc, Thresholds: th})
 }
 
 // DeleteDefaultConfiguration удаляет дефолтную конфигурацию по ID
@@ -132,49 +132,51 @@ func DeleteDefaultConfiguration(c *gin.Context) {
 	c.Status(http.StatusNoContent)
 }
 
-// BindDefaultConfigurationThreshold связывает дефолтную конфигурацию с порогом
-// @Summary         Связать дефолтную конфигурацию с порогом
+// BindDefaultConfigThreshold связывает дефолтную конфигурацию с порогом
+// @Summary         Привязать порог к дефолтной конфигурации
 // @Tags            9. Конфигурация: Конфигурации по-умолчанию
 // @Accept          json
 // @Produce         json
-// @Param           request body dto.BindDefaultConfigThresholdRequest true "Данные связывания"
+// @Param           request body dto.BindParamRequest true "ID конфигурации и ID порога"
 // @Success         200  {object}  map[string]string
+// @Failure         400  {object}  map[string]string
+// @Failure         500  {object}  map[string]string
 // @Router          /api/v1/default-configurations/bind [post]
-func BindDefaultConfigurationThreshold(c *gin.Context) {
-	var input dto.BindDefaultConfigThresholdRequest
+func BindDefaultConfigThreshold(c *gin.Context) {
+	var input struct {
+		DefaultConfigurationID int64 `json:"default_configuration_id" binding:"required"`
+		ThresholdID            int64 `json:"threshold_id" binding:"required"`
+	}
 	if err := c.ShouldBindJSON(&input); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	err := dao.BindDefaultConfigurationThreshold(c.Request.Context(), input)
-	if err != nil {
+	if err := dao.BindDefaultConfigThreshold(c.Request.Context(), input.DefaultConfigurationID, input.ThresholdID); err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 	c.JSON(http.StatusOK, gin.H{"message": "Порог успешно привязан к дефолтной конфигурации"})
 }
 
-// UnbindDefaultConfigurationThreshold разрывает связь дефолтной конфигурации с порогом
-// @Summary         Удалить связь дефолтной конфигурацию с порогом
+// UnbindDefaultConfigThreshold разрывает связь дефолтной конфигурации с порогом
+// @Summary         Удалить связь дефолтной конфигурации с порогом
 // @Tags            9. Конфигурация: Конфигурации по-умолчанию
-// @Param           defaultConfigurationId path      int  true  "ID Дефолтной Конфигурации"
+// @Param           defaultConfigurationId path      int  true  "ID Дефолтной конфигурации"
 // @Param           thresholdId            path      int  true  "ID Порога"
 // @Success         204  "No Content"
+// @Failure         404  {object}  map[string]string
+// @Failure         500  {object}  map[string]string
 // @Router          /api/v1/default-configurations/bind/{defaultConfigurationId}/{thresholdId} [delete]
-func UnbindDefaultConfigurationThreshold(c *gin.Context) {
-	defaultConfigID, errCfg := strconv.ParseInt(c.Param("defaultConfigurationId"), 10, 64)
-	thresholdID, errT := strconv.ParseInt(c.Param("thresholdId"), 10, 64)
-	if errCfg != nil || errT != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Неверные ID конфигураций или порогов"})
-		return
-	}
-	found, err := dao.UnbindDefaultConfigurationThreshold(c.Request.Context(), defaultConfigID, thresholdID)
+func UnbindDefaultConfigThreshold(c *gin.Context) {
+	defCfgID, _ := strconv.ParseInt(c.Param("defaultConfigurationId"), 10, 64)
+	tID, _ := strconv.ParseInt(c.Param("thresholdId"), 10, 64)
+	found, err := dao.UnbindDefaultConfigThreshold(c.Request.Context(), defCfgID, tID)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 	if !found {
-		c.JSON(http.StatusNotFound, gin.H{"error": "Указанная связь не найдена"})
+		c.JSON(http.StatusNotFound, gin.H{"error": "Связь не найдена"})
 		return
 	}
 	c.Status(http.StatusNoContent)
